--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@
               >
                 Github
               </button>
-              <!-- <button
+              <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Kuldeep001'"
+                onclick="location.href='https://kuldeep001.github.io/DIGITAL-CLOCK/'"
               >
                 Live Demo
-              </button> -->
+              </button>
             </div>
           </div>
         </div>
