--- a/index.html
+++ b/index.html
@@ -278,12 +278,12 @@
               >
                 Github
               </button>
-              <!-- <button
+              <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Kuldeep001'"
+                onclick="location.href='https://kuldeep001.github.io/My-Portfolio/'"
               >
                 Live Demo
-              </button> -->
+              </button>
             </div>
           </div>
           <div class="details-container color-container">
