--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
             </div>
           </div>
           <div class="text-container">
-            <p>write about your experience and education</p>
+            <p>  I'm Kuldeep, a recent graduate of Bachelor's in Technology from Dronacharya Group of Institutions. Passionate about frontend development, I am determined to embark on a career journey as a frontend developer.
+During my academic journey, I had the opportunity to dive deep into the world of web development through a comprehensive 3-month internship where I honed my skills in React.js, the heart of modern web applications. This hands-on experience has equipped me with practical insights into building dynamic and responsive user interfaces.
+My skill set extends beyond React.js to encompass Git for version control, alongside a solid understanding of HTML, CSS, JavaScript, and Bootstrap. I believe in the power of continuous learning and thrive on staying abreast of emerging technologies to deliver innovative solutions.
+Driven by a passion for creating seamless user experiences, I am eager to leverage my expertise to contribute effectively to dynamic projects and collaborate with diverse teams. Let's embark on a journey to craft impactful digital experiences together
+</p>
           </div>
         </div>
       </div>
