--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="profile">
       <div class="section__pic-container">
         <img
-          src="./assets/profile2.jpeg"
+          src="./assets/lappro.jpg"
           style="width: 450px"
           alt="Kuldeep profile picture"
         />
@@ -51,7 +51,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Resume.pdf')"
+            onclick="window.open('./assets/Resumek1.pdf')"
           >
             Download CV
           </button>
@@ -112,8 +112,21 @@
             </div>
           </div>
           <div class="text-container">
-            <p>  I'm Kuldeep, a recent graduate of Bachelor's in Technology from Dronacharya Group of Institutions. Passionate about frontend development, I am determined to embark on a career journey as a frontend developer.During my academic journey, I had the opportunity to dive deep into the world of web development through a comprehensive 3-month internship where I honed my skills in React.js, the heart of modern web applications. This hands-on experience has equipped me with practical insights into building dynamic and responsive user interfaces. I believe in the power of continuous learning and thrive on staying abreast of emerging technologies to deliver innovative solutions, I am eager to leverage my expertise to contribute effectively to dynamic projects and collaborate with diverse teams.
-</p>
+            <p>
+              I'm Kuldeep, a recent graduate of Bachelor's in Technology from
+              Dronacharya Group of Institutions. Passionate about frontend
+              development, I am determined to embark on a career journey as a
+              frontend developer.During my academic journey, I had the
+              opportunity to dive deep into the world of web development through
+              a comprehensive 3-month internship where I honed my skills in
+              React.js, the heart of modern web applications. This hands-on
+              experience has equipped me with practical insights into building
+              dynamic and responsive user interfaces. I believe in the power of
+              continuous learning and thrive on staying abreast of emerging
+              technologies to deliver innovative solutions, I am eager to
+              leverage my expertise to contribute effectively to dynamic
+              projects and collaborate with diverse teams.
+            </p>
           </div>
         </div>
       </div>
@@ -210,7 +223,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Node.Js</h3>
+                  <h3>PHP</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -221,7 +234,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>C++</h3>
+                  <h3>Wordpress</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
